Added "Om nettstedet"

--- a/index.html
+++ b/index.html
@@ -32,9 +32,19 @@
     <button class="btn btn-dark" id="clearBtn">Tøm felt</button>
     <br><br>
     <footer>
-      <h2>Alan Turing</h2>
-      <p>Visste du at Alan Turing lagde verdens første datamaskin?<br>Han brukte maskinen til å dekryptere Enigma-koden,
-      som Tyskland brukte til å sende hemmelige meldinger under 2.Verdenskrig.</p>
+      <div class="alanTuring">
+        <h2>Alan Turing</h2>
+        <p>Visste du at Alan Turing lagde verdens første datamaskin?<br>Han brukte maskinen til å dekryptere Enigma-koden,
+        som Tyskland brukte til å sende hemmelige meldinger under 2.Verdenskrig.</p>
+      </div>
+      <br>
+      <br>
+      <div class="omNettstedet">
+        <h2>Om nettstedet</h2>
+        <p>Dette nettstedet krypterer teksten du skriver i inputfeltet, med Caesar-kryptering. <br>
+          Nettstedet bruker et alfabet i tilfeldig rekkefølge, inkludert tall, symboler, og store bokstaver. <br>
+          Dette er for å gjøre det vanskeligere for andre å dekryptere meldingene man skriver.</p>
+      </div>
     </footer>
   </div>
   <br>
